# stableKnowledge

./: README.md  evaluation.py  hyponyms.txt  image_generator.py  image_title_creator.py  interrogate_images.py  pipeline.py  requirements.txt  synsets.txt
abstract_vs_concrete_evaluation/: abstract_vs_concrete_evaluation.py  abstract_vs_concrete_llm_evaluation.py
abstract_vs_concrete_identifier/: abstract_concrete_identifier.py  dataset.txt
dataset_extractor/: data_1.ts  data_10.ts  data_2.ts  data_3.ts  data_4.ts  data_5.ts  data_6.ts  data_7.ts  data_8.ts  data_9.ts  dataset_generator.py  file_1.txt  file_10.txt  file_2.txt  file_3.txt  file_4.txt  file_5.txt  file_6.txt  file_7.txt  file_8.txt  file_9.txt  hyponyms_with_glosses.txt  ts_to_txt.py  txt_to_ts.py
hollink_analyzer/: annotations Ays - allsynsetsinbranch_handtool.csv  annotations Jacco - allsynsetsinbranch_handtool.csv  hollink_analyzer.py  thebadone.csv
image_final_analyzer/: final_analyzer.py
json_analyzer/: 3.json  4.json  5.json  7.json  8.json  amon.json  chiara-bonfanti.json  chiara-fulfaro.json  chiara_di_lodovico.json  davide-audrito.json  elena-torassa.json  federico.json  json_analyzer.py  ldc.json  luigi-di-caro.json  sabrina.json  vladimiro-loverarulfi.json
plot_scores_concreteness_basicness/: abs_concr.txt  basicness_scores.xlsx  concreteness_basicness_plotting.py
synset_selector/: hyponyms_with_glosses.txt  reorder_based_on_semcor.py  (+2 more)
term_extractor/: basic_concepts_extractor.ipynb  common_nouns.txt  extract.py  ogden.txt  pyproject.toml  requirements.txt  transformers_filter.py
