[tool.poetry]
name = "middleconceptsextractor"
version = "0.1.0"
description = ""
authors = ["Federico Torrielli <evilscript@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nltk = "^3.7"
torch = "^1.13.0"
transformers = "^4.24.0"
sentencepiece = "^0.1.97"
protobuf = "^4.21.9"
accelerate = "^0.13.2"
scikit-learn = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
